--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "vue-toast",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@yanghongjun19/vue-toast",
+  "main": "lib/vue-toast.common.js",
+  "version": "0.3.0",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build:lib": "vue-cli-service build --target lib --name vue-toast --dest lib  src/components/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "user": "0.0.0"
   },
   "devDependencies": {
+    "vue": "^2.6.11",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
